Define a tangent bundle and projection map

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -146,3 +146,13 @@
     \frac{\partial}{\partial x^i}\Big{\vert}_p := f \mapsto \frac{\partial}{\partial x^i}\Big{\vert}_{\phi(p)}(f \circ \phi^{-1}).
   \end{align*}
 \end{defn}
+
+\begin{defn}[Tangent Bundle]
+  Let $M$ be a smooth manifold with or without boundary.
+  The tangent bundle of $M$, denoted by $TM$, is the disjoint union $\coprod_{p \in M} T_pM$.
+\end{defn}
+
+\begin{defn}[Projection Map]
+  Let $M$ be a smooth manifold with or without boundary.
+  The projection map $\pi: TM \rightarrow M$ is the map defined by $(p, v) \mapsto p$.
+\end{defn}
