--- a/dictionary.tex
+++ b/dictionary.tex
@@ -156,3 +156,17 @@
   Let $M$ be a smooth manifold with or without boundary.
   The projection map $\pi: TM \rightarrow M$ is the map defined by $(p, v) \mapsto p$.
 \end{defn}
+
+\subsection{Submersions, Immersions, and Embeddings}
+
+\begin{defn}[Rank]
+  Let $M, N$ be smooth manifolds with or without boundary and let $F: M \rightarrow N$ be a smooth map.
+  Then the rank of $F$ at $p \in M$ is:
+  \begin{itemize}
+    \item
+      The rank of the linear map $dF_p: T_pM \rightarrow T_{F(p)}N$.
+    \item
+      The dimension of the subspace $dF_p(T_pM)$ in the vector space $T_{F(P)}N$.
+  \end{itemize}
+  It is easy to see that the two definitions above are always equivalent.
+\end{defn}
