Define submersions and immersions

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -170,3 +170,19 @@
   \end{itemize}
   It is easy to see that the two definitions above are always equivalent.
 \end{defn}
+
+\begin{defn}[Submersions and Immersions]
+  Let $M, N$ be smooth manifolds with or without boundary and let $F: M \rightarrow N$ be a smooth map.
+  \begin{itemize}
+    \item
+      If $F$ has the same rank at every point $p \in M$, then $F$ is said to have \textit{constant rank}, and the rank is denoted by $\rank F$.
+    \item
+      If the rank of $F$ at $p \in M$ is equal to $\max \{ \dim M, \dim N \}$, then $F$ is said to have \textit{full rank at $p$}.
+    \item
+      If $F$ has full rank everywhere, then $F$ is said to have \textit{full rank}.
+    \item
+      If $F$ has constant rank and $\rank F = \dim N$, $F$ is called a \textit{smooth submersion}.
+    \item
+      If $F$ has constant rank and $\rank F = \dim M$, $F$ is called a \textit{smooth immersion}.
+  \end{itemize}
+\end{defn}
