Fix the definition of a boundary point

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -44,8 +44,8 @@
       There exists a neighborhood $U$ of $p$ and a homeomorphism $\phi:U \rightarrow \hat{U}$ where $\hat{U}$ is an open subset of $\mathbb{R}^n$.
       $p$ is called an \textit{interior point} and $(U, \phi)$ is called an \textit{interior chart}.
     \item
-      There exists a neighborhood $U$ of $p$ and a homeomorphism $\phi:U \rightarrow \hat{U}$ where $\hat{U}$ is an open subset of $\mathbb{H}^n$ with $\hat{U} \cap \partial \mathbb{H}^n \ne \emptyset$.
-      $p$ is called a \textit{boundary point} and $(U, \phi)$ is called a \textit{boundary chart}.
+      There exists a neighborhood $U$ of $p$ and a homeomorphism $\phi:U \rightarrow \hat{U}$ where $\hat{U}$ is an open subset of $\mathbb{H}^n$ with $\phi(p) \in \partial \mathbb{H}^n$.
+      $p$ is called a \textit{boundary point}.
   \end{enumerate}
   Then $M$ is called an \textit{$n$-dimensional topological manifold with boundary}.
   Note that every topological manifold is a topological manifold with boundary.
