--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -58,6 +58,7 @@
 \DeclareMathOperator{\Gal}{Gal}
 \DeclareMathOperator{\RP}{\mathbb{R}\mathbb{P}}
 \DeclareMathOperator{\Int}{Int}
+\DeclareMathOperator{\bd}{bd}
 
 \makeatletter
 \let\c@equation\c@thm
