--- a/chapter2.tex
+++ b/chapter2.tex
@@ -208,9 +208,12 @@
       Then $(G \circ F) \circ (F^{-1} \circ G^{-1})$ and $(F^{-1} \circ G^{-1}) \circ (G \circ F)$ are both the identity map on the corresponding space, so $F^{-1} \circ G^{-1}$ is the smooth inverse of $G \circ F$.
       Therefore, $G \circ F$ is a diffeomorphism.
     \item
-      \todo[inline,caption={}]{
-        Read Example 1.34(Smooth Product Manifolds)!
-      }
+      By Example 1.34, we know that $M_1 \times \cdots \times M_k$ and $N_1 \times \cdots \times N_k$ are both smooth manifolds.
+      Let $\mathcal{A}_{M_i}, \mathcal{A}_{N_i}, \mathcal{A}_M$ and $\mathcal{A}_N$ denote the smooth manifold structures of $M_i, N_i, M_1 \times \cdots \times M_k, N_1 \times \cdots \times N_k$, respectively.
+      Let a smooth map $F_i: M_i \rightarrow N_i$ be given for each $i$.
+      Let $(p_1, \cdots, p_k) \in M_1 \times \cdots M_k$ be given.
+      Then there exist $(U_i, \phi_i) \in \mathcal{A}_{M_i}$ and $(V_i, \psi_i) \in \mathcal{A}_{N_i}$ such that $p_i \in U_i, F_i(U_i) \subset V_i, \psi_i \circ F_i \circ \phi_i^{-1}: \phi_i(U_i) \rightarrow \psi_i(V_i)$ is smooth for each $i$.
+      This implies that $(\psi_1 \circ F_1 \circ \phi_1^{-1}) \times \cdots (\psi_k \circ F_k \circ \phi_k^{-1}) = (\psi_1 \times \cdots \times \psi_k) \circ (F_1 \times \cdots \times F_k) \circ (\phi_1 \times \cdots \times \phi_k)^{-1}$ is smooth.
     \item
       Proposition 2.4 states that every smooth map is continuous.
       Thus $F$ and $F^{-1}$ are both continuous.
