Finish ex 2.16 for real

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -214,6 +214,10 @@
       Let $(p_1, \cdots, p_k) \in M_1 \times \cdots M_k$ be given.
       Then there exist $(U_i, \phi_i) \in \mathcal{A}_{M_i}$ and $(V_i, \psi_i) \in \mathcal{A}_{N_i}$ such that $p_i \in U_i, F_i(U_i) \subset V_i, \psi_i \circ F_i \circ \phi_i^{-1}: \phi_i(U_i) \rightarrow \psi_i(V_i)$ is smooth for each $i$.
       This implies that $(\psi_1 \circ F_1 \circ \phi_1^{-1}) \times \cdots (\psi_k \circ F_k \circ \phi_k^{-1}) = (\psi_1 \times \cdots \times \psi_k) \circ (F_1 \times \cdots \times F_k) \circ (\phi_1 \times \cdots \times \phi_k)^{-1}$ is smooth.
+
+      Therefore, $F_1 \times \cdots \times F_k$ is smooth.
+      Using the exact same argument, we can conclude that $F_1^{-1} \times \cdots \times F_k^{-1}$ is smooth.
+      Since $(F_1 \times \cdots \times F_k)^{-1} = F_1^{-1} \times \cdots \times F_k^{-1}$, $F_1 \times \cdots \times F_k$ is a diffeomorphism.
     \item
       Proposition 2.4 states that every smooth map is continuous.
       Thus $F$ and $F^{-1}$ are both continuous.
