--- a/chapter2.tex
+++ b/chapter2.tex
@@ -299,7 +299,7 @@
   By Proposition 2.4, $f$ cannot be smooth.
 \end{proof}
 
-\begin{customprob}{2-2(Proof of Proposition 2.12)}
+\begin{customprob}{2-2(Proof of Proposition 2.12)}\label{problem_2_2}
   Suppose $M_1, \cdots, M_k$ and $N$ are smooth manifolds with or without boundary, such that at most one of $M_1, \cdots, M_k$ has nonempty boundary.
   For each $i$, let $\pi_i: M_1 \times \cdots \times M_k \rightarrow M_i$ denote the projection onto the $M_i$ factor.
   A map $F: N \rightarrow M_1 \times \cdots \times M_k$ is smooth if and only if each of the component maps $F_i = \pi_i \circ F: N \rightarrow M_i$ is smooth.
