--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -84,6 +84,9 @@
 \section{Chapter 3: Tangent Vectors}
 \input{chapter3.tex}
 
+\section{Chapter 4: Submersions, Immersions, and Embeddings}
+\input{chapter4.tex}
+
 \section{Appendix A: Review of Topology}
 \input{appendix_a.tex}
 
@@ -94,5 +97,3 @@
 \input{dictionary.tex}
 
 \end{document}
-
-
