Add comments about geometric pictures

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -119,8 +119,9 @@
   \begin{align*}
     v(fg) = f(p)vg + g(p)vf
   \end{align*}
-
   for all $f, g \in C^{\infty}(M)$.
+
+  This corresponds to ``arrows that are tangent to $M$ and whose basepoints are attached to $M$ at $p$" even though it may not be easy to see that from this definition.
 \end{defn}
 
 \begin{defn}[Tangent Space]
@@ -133,8 +134,8 @@
   \begin{align*}
     dF_p(v) := f \mapsto v(f \circ F)
   \end{align*}
-
   Equivalently, $\forall v \in T_pM, \forall f \in C^{\infty}(N), dF_p(v)(f) = v(f \circ F)$.
+  This corresponds to ``the directional derivative of $F$ at $p$ in the direction of the arrow $v$."
 \end{defn}
 
 \begin{defn}[Coordinate Vectors]
