--- a/chapter2.tex
+++ b/chapter2.tex
@@ -366,5 +366,11 @@
       Suppose that it is $(U_2^{+}, \phi_2^{+})$.
       (Again, this argument works with other cases with minor modifications.)
       Then the composition $\phi_2^{+} \circ f \circ (\phi_2^{+})^{-1}$ is equal to $x \mapsto \cos(n(\arccos(x)))$, which is clearly smooth.
+    \item
+      Example 1.31 shows the existence of a smooth structure of $S^n$ and let $\mathcal{A}$ denote it.
+      Let $p \in S^1$.
+      Then there exists a chart $(U_i^{\pm}, \phi_i^{\pm})$ in $\mathcal{A}$ around $p$.
+      Then $(U_i^{\mp}, \phi_i^{\mp})$ is a chart containing $\alpha(p)$.
+      Then $\phi_i^{\mp} \circ \alpha \circ \phi_i^{\pm}$ is the map $x \mapsto -x$, which is clearly smooth.
   \end{enumerate}
 \end{proof}
