Add a comment problem 2-3

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -372,5 +372,9 @@
       Then there exists a chart $(U_i^{\pm}, \phi_i^{\pm})$ in $\mathcal{A}$ around $p$.
       Then $(U_i^{\mp}, \phi_i^{\mp})$ is a chart containing $\alpha(p)$.
       Then $\phi_i^{\mp} \circ \alpha \circ \phi_i^{\pm}$ is the map $x \mapsto -x$, which is clearly smooth.
+    \item
+      \todo[inline,caption={}]{
+        What does this map even represent?
+      }
   \end{enumerate}
 \end{proof}
