--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -59,6 +59,8 @@
 \DeclareMathOperator{\RP}{\mathbb{R}\mathbb{P}}
 \DeclareMathOperator{\Int}{Int}
 \DeclareMathOperator{\bd}{bd}
+\DeclareMathOperator{\Re}{Re}
+\DeclareMathOperator{\Im}{Im}
 
 \makeatletter
 \let\c@equation\c@thm
