--- a/chapter2.tex
+++ b/chapter2.tex
@@ -357,21 +357,16 @@
     \item 
       Example 1.31 shows the existence of a smooth structure of $S^1$ and let $\mathcal{A}$ denote it.
       Let $p \in S^1$.
-      Then there exists a chart $(U_i^{\pm}, \phi_i^{\pm})$ in $\mathcal{A}$ around $p$.
-      Let $\hat{p}$ denote $\phi_i^{\pm}(p)$.
-      Suppose that it is $U_2^{+}$.
-      (The following argument works with other cases with minor modifications.)
-      We will consider the restriction of $\phi_i^{+}$ to $(\hat{p} - \epsilon, \hat{p} - \epsilon)$ for some $\epsilon > 0$.
-      For a sufficiently small $\epsilon > 0$, $f(\phi_i^{+}((\hat{p} - \epsilon, \hat{p} + \epsilon)))$ is covered by a single chart $(U_j^{\pm}, \phi_j^{\pm})$.
-      Suppose that it is $(U_2^{+}, \phi_2^{+})$.
-      (Again, this argument works with other cases with minor modifications.)
-      Then the composition $\phi_2^{+} \circ f \circ (\phi_2^{+})^{-1}$ is equal to $x \mapsto \cos(n(\arccos(x)))$, which is clearly smooth.
+      Then there exist $(U_i^{\pm}, \phi_i^{\pm}), (U_j^{\pm}, \phi_j^{\pm}) \in \mathcal{A}$ around $p, p_n(p)$, respectively.
+      Then the composition $\phi_j^{\pm} \circ f \circ (\phi_i^{\pm})^{-1}$ is equal to one of $\cos(n(\arccos(x))), \sin(n(\arcsin(x))), \cos(n(\arcsin(x))), \sin(n(\arccos(x)))$, all of which are clearly smooth.
+      By Proposition 2.5(a), $p_n$ is smooth.
     \item
       Example 1.31 shows the existence of a smooth structure of $S^n$ and let $\mathcal{A}$ denote it.
       Let $p \in S^1$.
       Then there exists a chart $(U_i^{\pm}, \phi_i^{\pm})$ in $\mathcal{A}$ around $p$.
       Then $(U_i^{\mp}, \phi_i^{\mp})$ is a chart containing $\alpha(p)$.
       Then $\phi_i^{\mp} \circ \alpha \circ \phi_i^{\pm}$ is the map $x \mapsto -x$, which is clearly smooth.
+      By Proposition 2.5(a), $\alpha$ is smooth.
     \item
       Let $z = a + bi, w = c + di$.
       $z\overline{w} = ac + bd + i(bc - ad)$ and $w\overline{z} = (ac + bd) - i(bc - ad)$.
