--- a/chapter2.tex
+++ b/chapter2.tex
@@ -364,9 +364,8 @@
       Example 1.31 shows the existence of a smooth structure of $S^n$ and let $\mathcal{A}$ denote it.
       Let $p \in S^1$.
       Then there exists a chart $(U_i^{\pm}, \phi_i^{\pm})$ in $\mathcal{A}$ around $p$.
-      Then $(U_i^{\mp}, \phi_i^{\mp})$ is a chart containing $\alpha(p)$.
+      Then $(U_i^{\mp}, \phi_i^{\mp})$ is a chart containing $\alpha(p)$ with $\alpha(U_i^{\pm}) \subset U_i^{\mp}$.
       Then $\phi_i^{\mp} \circ \alpha \circ \phi_i^{\pm}$ is the map $x \mapsto -x$, which is clearly smooth.
-      By Proposition 2.5(a), $\alpha$ is smooth.
     \item
       Let $z = a + bi, w = c + di$.
       $z\overline{w} = ac + bd + i(bc - ad)$ and $w\overline{z} = (ac + bd) - i(bc - ad)$.
